<resources>
    <string name="app_name">Macro Pet SuperApp</string>
    <string name="imageview">ImgaeView</string>
    <string name="started_title">Help animals around you</string>
    <string name="started_subtitle">Adopt, community, shop to
<br>help animals around you</br>
    </string>
    <string name="get_started">Get Started</string>
    <string name="ini_logo">Ini Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="super_pets">SUPER PETS</string>
    <string name="email_username">Email/username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_to_the_home_activity">Welcome to the Home Activity</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_cat_food">CatFoodActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Home</string>
    <string name="title_adopt">Adopt</string>
    <string name="title_community">Community</string>
    <string name="title_market">Market</string>
    <string name="community_here">Community Here</string>
    <string name="join">Join</string>
    <string name="news">News</string>
    <string name="recent_views">Recent Views</string>
    <string name="clow_cat_lovers_in_the_world">CLOW / Cat Lovers in the World</string>
    <string name="community_detail">Kami adalah organisasi atau perkumpulan yang memiliki misi membantu hewan khususnya kucing - kucing terlantar dan membutuhkan pertolongan medis, memberikan atau mencarikan adopter terhadap hewan khususnya kucing terlantar (stray), memberikan vaksinasi terhadap hewan khususnya kucing agar terhindar dari penyakit berbahaya dan menular (termasuk rabies), memberikan edukasi pentingnya menjaga populasi hewan khususnya kucing, agar tidak terjadi ledakan populasi di suatu wilayah maka diadakan Sterilisasi.</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>