<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_yourlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:text="Your location"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Solo, Indonesia"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/searchView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_yourlocation" />

        <TextView
            android:id="@+id/text_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            android:text="Khairun"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/img_profile"
            app:layout_constraintEnd_toStartOf="@id/img_profile" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ellipse_77"
            app:layout_constraintBottom_toTopOf="@id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/search_background"
            app:iconifiedByDefault="false"
            app:layout_constraintBottom_toTopOf="@+id/text_news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:queryHint="Search" />

        <TextView
            android:id="@+id/text_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/news"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/img_news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/img_news" />

        <ImageView
            android:id="@+id/img_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/text_recent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/rectangle_666" />

        <TextView
            android:id="@+id/text_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/recent_views"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@+id/cardView_recent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/cardView_recent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_recent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/abu"
            app:cardCornerRadius="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="16dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/img_community">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_recent"
                    android:layout_width="150dp"
                    android:layout_height="160dp"
                    android:layout_marginBottom="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/catkampung" />

                <TextView
                    android:id="@+id/text_pet_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_recent"
                    android:layout_alignStart="@id/img_recent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="Pinoy &amp; Roro"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/text_pet_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_pet_title"
                    android:layout_alignStart="@id/text_pet_title"
                    android:layout_marginBottom="8dp"
                    android:text="Age 3 &amp; Female"
                    android:textSize="10sp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_recent2"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/abu"
            app:cardCornerRadius="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/img_community">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_recent2"
                    android:layout_width="150dp"
                    android:layout_height="160dp"
                    android:layout_marginBottom="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/catkampung2" />

                <TextView
                    android:id="@+id/text_pet_title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_recent2"
                    android:layout_alignStart="@id/img_recent2"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="Pucis"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/text_pet_subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_pet_title2"
                    android:layout_alignStart="@id/text_pet_title2"
                    android:layout_marginBottom="8dp"
                    android:text="Age 3 &amp; Female"
                    android:textSize="10sp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/img_community"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/rectangle_667" />


        <TextView
            android:id="@+id/text_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/community_here"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btn_community"
            app:layout_constraintEnd_toEndOf="@+id/img_community"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="@+id/img_community" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_community"
            style="@style/Button"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginBottom="12dp"
            android:text="@string/join"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_community"
            app:layout_constraintEnd_toEndOf="@+id/img_community"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="@+id/img_community"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>